# FTIO

./: .gitignore  CONTRIBUTORS.md  ChangeLog.md  HOWTO_release  LICENSE  Makefile  README.md  daf  old_setup  pyproject.toml
.github/workflows/: CI.yml  CI_multisteps.yml  draft-release.yml  python-publish.yml
artifacts/capturing_periodic_io/: README.md
artifacts/capturing_periodic_io_using_frequency_techniques/: README.md
artifacts/capturing_periodic_io_using_frequency_techniques/HACC-IO/: README.md
artifacts/capturing_periodic_io_using_frequency_techniques/IOR/: README.md
artifacts/capturing_periodic_io_using_frequency_techniques/LAMMPS/: README.md
artifacts/capturing_periodic_io_using_frequency_techniques/NEK5000/: README.md
artifacts/frontiers25/: README.md
artifacts/ipdps24/: README.md
artifacts/ipdps24/HACC-IO/: README.md
artifacts/ipdps24/IOR/: README.md
artifacts/ipdps24/LAMMPS/: README.md
artifacts/ipdps24/NEK5000/: README.md
artifacts/ipdps25/: README.md
docker/: Dockerfile
docs/: README.md  api.md  approach.md  change_point_detection.md  cli_reference.md  contributing.md  file_formats.md  filtering.md  frequency_methods.md  ftio_server.md  machine_learning_models_documentation.md  metric_proxy_zmq.md  ml_models.md  phase_automaton.md  prediction_api.md  students_contribute.md  tools.md  zmq.md
examples/: 8.jsonl  burst_width_example.py  gui_socket_server.py  test_socket_client.py
examples/API/: phase_automaton_demo.py  test_api.py
examples/API/proxy/: trace_export.msgpack
examples/API/zmq/: Makefile  test_mpi.cxx
examples/custom/JSON/: custom.json  custom_app.json
examples/custom/txt/: custom_input.py
examples/gekkoFs/JSON/: write_2024-02-28_20:50:02_x0184_16925.json
examples/ior/parallel/: 384.msgpack
examples/jupyter_notebooks/: quick_example.ipynb
examples/txt/: 2.txt  4.txt  custom_input.py
ftio/: __init__.py  __main__.py
ftio/analysis/: __init__.py  _correlation.py  _logicize.py  anomaly_detection.py  periodicity_analysis.py  signal_analysis.py
ftio/api/: ftio_api.py
ftio/api/gekkoFs/: __init__.py  data_control.py  file_queue.py  ftio_gekko.py  gekko_helper.py  launch.sh  (+6 more)
ftio/cli/: __init__.py  ftio_core.py  predictor.py
ftio/freq/: __init__.py  _amd.py  _amd_workflow.py  _analysis_figures.py  _astft.py  _astft_workflow.py  _dft.py  _dft_workflow.py  _dft_x_dwt.py  _filter.py  _fourier_fit.py  _logicize.py  _share_signal_data.py  _stft.py  _stft_workflow.py  _wavelet.py  _wavelet_cont_workflow.py  _wavelet_disc_workflow.py  _wavelet_helpers.py  _wavelet_workflow.py  anomaly_detection.py  anomaly_plot.py  autocorrelation.py  concentration_measures.py  denoise.py  discretize.py  dtw.py  duty_cycle.py  freq_data.py  freq_html.py  freq_plot_core.py  frq_verification.py  helper.py  if_comp_separation.py  perodicity_detection.py  prediction.py  time_window.py
ftio/ftio/: ftio.py
ftio/gui/: __init__.py  dashboard.py  data_models.py  socket_listener.py  socket_logger.py  visualizations.py
ftio/ioparse/: args.py  bandwidth.py  darshan_reader.py  metrics.py  msgpack_reader.py  parse_darshan.py  parse_msgpack.py  parse_recorder.py  percent.py  print.py  sample.py  scales.py  simrun.py  time_io.py
ftio/machine_learning_models/: machine_learning_models.py
ftio/ml/: __init__.py  arima.py  hybrid_model.py  hybrid_training.py  models_and_training.py
ftio/modeling/: __init__.py  automaton_library.py  model_manager.py  phase_automaton.py  reference_automaton.py  state_tracker.py  transition_predictor.py
ftio/multiprocessing/: async_process.py  parallel_processing.py
ftio/parse/: __init__.py  args.py  bandwidth.py  csv_reader.py  custom_patterns.py  darshan_reader.py  extract.py  ftio_to_extrap.py  helper.py  input_template.py  metrics.py  msgpack_reader.py  overlap_thread.py  parse_custom.py  parse_darshan.py  parse_json.py  parse_jsonl.py  parse_msgpack.py  parse_recorder.py  parse_txt.py  parse_zmq.py  percent.py  print.py  recorder_reader.py  sample.py  scales.py  simrun.py  time_io.py  txt_reader.py  zmq_reader.py
ftio/plot/: anomaly_plot.py  cepstrum_plot.py  freq_plot.py  helper.py  plot_amd.py  plot_autocorrelation.py  plot_bandwidth.py  plot_burst_width.py  plot_core.py  plot_dft.py  plot_error.py  plot_filter.py  plot_stft.py  plot_tf.py  plot_wavelet.py  plot_wavelet_cont.py  plot_wavelet_disc.py  print_html.py  spectrum.py  stack_plot.py  units.py
ftio/plot_io/: plot_core.py  plot_error.py  print_html.py
ftio/post/: processing.py
ftio/prediction/: __init__.py  analysis.py  async_process.py  change_point_detection.py  group.py  helper.py  monitor.py  online_analysis.py  phase_automaton.py  pools.py  pred_zmq.py  probability.py  probability_analysis.py  processes.py  processes_zmq.py  shared_resources.py  tasks.py  unify_predictions.py
ftio/processing/: compact_operations.py  operations.py  post_processing.py  print_output.py
ftio/util/: convert_old_trace.py  ioparse.py  ioplot.py  live_plot.py  parse.py  server_ftio.py  update_header.py
gui/: README.md  __init__.py  dashboard.py  data_models.py  requirements.txt  run_dashboard.py  socket_listener.py  visualizations.py
machine_learning_models/: machine_learning_models.py
test/: Makefile  test_amd.py  test_analysis.py  test_api.py  test_astft.py  test_burst_width.py  test_change_point_detection.py  test_filter.py  test_flush_log.py  test_ftio.py  test_immediate_change_detection.py  test_ioparse.py  test_ioplot.py  test_machine-learning-models.py  test_ml_models.py  test_modeling.py  test_operations.py  test_phase_automaton.py  test_prediction.py  test_proxy.py  test_scales.py  test_stft.py  test_wavelet.py  test_wavelet_plot.py
test/parse/: test_bandwidth.py  test_csv_reader.py  test_helper.py  test_input_template.py  test_metrics.py  test_percent.py
test/plot/: test_constants.py  test_helper.py  test_ioplot.py  test_spectrum.py  test_units.py
test/prediction/: __init__.py  test_debounce.py  test_group.py  test_helper.py  test_probability.py  test_probability_analysis.py  test_shared_resources.py  test_unify_predictions.py
(+70 files in other folders)
