[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { }
# include = ["ftio*"]  # package names should match these glob patterns (["*"] by default)
# exclude = ["ftio.tests*"]  


[project]
name = "ftio-hpc"
dynamic = ["version"]
dependencies = [
    "numpy",
    "scikit-learn",
    "pyzmq",
    "numba",
    "darshan",
    "scipy",
    "pandas",
    "orjson",
    "jsonlines",
    "plotly",
    "kneed",
    "PyWavelets",
    "msgpack",
    "rich",
    "pytest",
    "pytest-cov",
    "fastcluster",
]

requires-python = ">=3.8"
authors = [{ name = "Ahmad Tarraf", email = "ahmad.tarraf@tu-darmstadt.de" }]
maintainers = [
    { name = "Ahmad Tarraf", email = "ahmad.tarraf@tu-darmstadt.de" },
]
description = "Frequency Techniques for I/O"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["ftio", "I/O"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[project.urls]
Homepage = "https://github.com/tuda-parallel/FTIO"
Documentation = "https://github.com/tuda-parallel/FTIO/docs"
Repository = "https://github.com/tuda-parallel/FTIO"
"Bug Tracker" = "https://github.com/tuda-parallel/FTIO/issues"
Changelog = "https://github.com/tuda-parallel/FTIO/blob/master/CHANGELOG.md"


[project.scripts]
# Standard Scripts (always available)
ftio = "ftio.cli.ftio_core:run"
predictor = "ftio.cli.predictor:main"
ioplot = "ftio.util.ioplot:main"
ioparse = "ftio.util.ioparse:main" # parse several JSON files from TMIO to a single profile for Extra-P
predictor_jit = "ftio.api.gekkoFs.predictor_gekko_zmq:main"
jit = "ftio.api.gekkoFs.jit.jit:main"
parallel_trace_analysis = "ftio.api.trace_analysis.parallel_trace_analysis:main" # analyses several traces (JSON or CSV) in parallel
proxy_ftio = "ftio.api.metric_proxy.parallel_proxy:main"

# Debug-Specific Scripts
plot_bandwdith = "ftio.plot.plot_bandwidth:main"
convert_trace = "ftio.util.convert_old_trace:main"
trace_ftio = "ftio.api.trace_analysis.trace_ftio_v2:main"
trace_analysis = "ftio.api.trace_analysis.trace_analysis:main"
admire_proxy_invoke_ftio = "ftio.api.metric_proxy.proxy_invoke_ftio:main"
admire_proxy_zmq = "ftio.api.metric_proxy.proxy_zmq:main"
jit_plot = "ftio.api.gekkoFs.jit.jit_plot:main"
server_ftio = "ftio.util.server_ftio:main_cli"

[project.optional-dependencies]
external-libs = [
    "fastdtw",
    "flask",
    "colorlog",
]

development-libs = [
    "black",
    "isort",
    "nbstripout",
    "ruff",
]

amd-libs = [
    "opencv-contrib-python",
    "tftb>=0.2.0",
    "vmdpy",
    "pysdkit",
]

plot-libs = [
    "dash",
    "dash_extensions",
    "pytz",
    "plotly_resampler",
    "trace_updater",
]

[project.gui-scripts]


[tool.setuptools.dynamic]
version = { attr = "ftio.__version__" }
readme = { file = ["README.md"] }

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["ftio"]
omit = ["*/tests/*", "*/test/*"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.black]
line-length = 90
target-version = ["py311"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.flake8]
max-line-length = 90
extend-ignore = ["E203", "W503"]  # Black compatibility
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "env",
]

[tool.ruff]
line-length = 90
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "env",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E203",   # whitespace before ':' (Black compatibility)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # Use ternary operator (can reduce readability)

    # ==========================================================================
    # TODO: The following errors should be fixed manually and then removed
    # from this ignore list. They are temporarily ignored to pass CI checks.
    # ==========================================================================

    # Import issues
    "F403",   # undefined-local-with-import-star: `from module import *` used
    "F405",   # undefined-local-with-import-star-usage: name may be undefined from star import

    # Exception handling
    "E722",   # bare-except: do not use bare `except:`, specify exception type

    # Code style improvements
    "UP031",  # printf-string-formatting: use f-strings instead of % formatting
    "SIM102", # collapsible-if: use single `if` instead of nested `if` statements
    "SIM113", # enumerate-for-loop: use `enumerate()` for index variable in `for` loop
    "SIM115", # open-file-with-context-handler: use context manager for `open()`
    "SIM101", # duplicate-isinstance-call: merge `isinstance()` calls
    "SIM116", # if-else-block-instead-of-dict-lookup: use dict lookup instead of if-else

    # Variable issues
    "F821",   # undefined-name: undefined variable name
    "F811",   # redefined-while-unused: redefinition of unused variable
    "B007",   # unused-loop-control-variable: loop variable not used in body
    "E741",   # ambiguous-variable-name: ambiguous variable name (e.g., l, O, I)
    "E402",   # module-import-not-at-top-of-file: import not at top of file
]

[tool.ruff.lint.isort]
known-first-party = ["ftio"]

